Fix box behind profile wiget

--- a/src/main/leftSide/_dm.scss
+++ b/src/main/leftSide/_dm.scss
@@ -7,14 +7,17 @@
 //dc official bot
 .botTagRegular__82f07 {background: var($acc);}
 
-//hover//
+//-------------------------hover-------------------------//
 .interactiveSelected__972a0 {
     color: var($txt);
     background: var($accA);
 }
 
 .interactiveSelected__972a0:hover {background: var($acc);}
-//-----//
+//-------------------------------------------------------//
 
-//profile sidebar
+//profile sidebar (right)
 .user-profile-sidebar {background: var($main);}
+
+//stupid box behind profile wiget
+.scroller__99e7c {margin-bottom: none;}
